[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# slog
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
anyhow = "1.0.65"

[dependencies.aurora_parser]
path = "../aurora-parser"

[dependencies.aurora_protocol]
path = "../aurora-protocol"

[dependencies.aurora_util]
path = "../aurora-util"

[dev-dependencies]
pretty_env_logger = "0.4"
